update openapi added query service & added concurrence method update
