# src/main/resources/openapi/yaml/api-order-interbank.yaml
@@ -1,4 +1,3 @@
----
 openapi: 3.1.0
 info:
   version: '1'
@@ -238,6 +237,15 @@ paths:
           required: true
           schema:
             type: string
+        - name: operation
+          in: query
+          description: Operation to apply to stock
+          required: true
+          schema:
+            type: string
+            enum:
+              - INCREASE
+              - DECREASE
       requestBody:
         description: Update an existent product in the system.
         content:
